# DNLP2025

./: .gitignore  NOTES.md  README.md  pyproject.toml
docs/: docs.md
src/dnlp2025/: Embedding.py  check.py  dataset.py  decoder_layer.py  download_datasets.py  encoder_decoder.py  encoder_layer.py  evaluate.py  experiment.ipynb  losses.py  model.py  positional_encoding.py  train.py  train_tokenizers.py
src/dnlp2025/tutorial/: saving_and_loading.py  simple_net.py
tests/: dataloader_test.py  model_test.py
