[tool.poetry]
name = "dnlp2025"
version = "0.1.0"
description = "Implementation of Attention Is All You Need"
authors = ["Thomas, Anastasia, Bartek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.3"
jupyter = "^1.1.1"
torch = "^2.7.0"
torchaudio = "^2.7.0"
torchvision = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
