[tool.poetry]
name = "dnlp2025"
version = "0.1.0"
description = "Implementation of Attention Is All You Need"
authors = ["Thomas, Anastasia, Bartek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.3"
jupyter = "^1.1.1"
torch = "^2.7.0"
torchaudio = "^2.7.0"
torchvision = "^0.22.0"
datasets = "^3.6.0"
tokenizers = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[tool.poetry.scripts]
train-tokenizers = "dnlp2025.train_tokenizers:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

